# seeder.gg

./: .env.example  LICENSE  README.md  pyproject.toml
seeder/: api.py  main.py  seed.py
