[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seeder-gg"
version = "0.1.0"
description = "Seed start.gg tournaments from historical standings"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
seeder = "seeder.main:main"

[tool.hatch.build.targets.wheel]
packages = ["seeder"]
